# flux_jit

./: .gitignore  FLUX_IR_SKETCH.md  FLUX_PROTOTYPE_SPEC.md  PERFORMANCE_HIERARCHY.md  PHASE2_ROADMAP.md  PROJECT_ARCHIVE_EXEC_SUMMARY.md  PROJECT_COMPLETION.txt  README.md  RESULTS.md  SHA256_MANIFEST.txt  STATUS.md
cpp/: CMakeLists.txt  bench_aos_soa_simd_compaction.cpp  bench_ecs_vs_oop.cpp  bench_false_sharing.cpp  cachegrind.ecs_component.out  cachegrind.ecs_linear.out  cachegrind.oop_pointer.out  cachegrind.oop_virtual.out  cachegrind2.ecs_component.out  cachegrind2.ecs_linear.out  cachegrind2.oop_pointer.out  cachegrind2.oop_virtual.out
cpp/profiling/: bench_20260226_184358.json  bench_20260226_184358.txt  bench_20260226_184405.json  bench_20260226_184405.txt  bench_20260301_230602.json  bench_20260301_230602.txt  bench_20260301_230611.json  bench_20260301_230611.txt  bench_20260301_230658.json  bench_20260301_230658.txt  bench_20260301_230705.json  bench_20260301_230705.txt  bench_20260301_230740.json  bench_20260301_230740.txt  bench_20260301_230748.json  bench_20260301_230748.txt  bench_20260301_231144.json  bench_20260301_231144.txt  bench_20260301_231147.json  bench_20260301_231147.txt  bench_20260301_231152.json  bench_20260301_231152.txt  bench_20260301_231157.json  bench_20260301_231157.txt  bench_20260301_231201.json  bench_20260301_231201.txt  bench_20260301_231206.json  bench_20260301_231206.txt  bench_20260301_231211.json  bench_20260301_231211.txt  bench_20260301_231216.json  bench_20260301_231216.txt  bench_20260301_231220.json  bench_20260301_231220.txt  (+2 more)
fluxjit/: CMakeLists.txt  DAMAGE_STRATEGY_SWEEP.md  DAMAGE_STRATEGY_SWEEP_2D.md
(+15 files in other folders)
